<resources>
    <string name="app_name">Database Using RxJava</string>
    <string name="refresh_users">Refresh Users</string>
    <string name="add_new_user">New user</string>
    <string name="nyc">NYC</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_20">20</string>
    <string name="andy">Andyshon</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="filter_by_age">By age:</string>
    <string name="apply">APPLY</string>
    <string name="no_filter">No filter</string>
    <string name="filter_by_gender">By gender</string>

    <string-array name="Age_filter">
        <item>Less than</item>
        <item>More than</item>
        <item>Equal</item>
    </string-array>

    <string-array name="Gender_filter">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
